samples/_failures_safe/1761709750_eba5d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4ed5b54.c: In function ‘main’:
./samples/SAFE/__tmp_c4ed5b54.c:183:5: error: expected declaration or statement at end of input
  183 |     if (!sm) {
      |     ^~
./samples/SAFE/__tmp_c4ed5b54.c:183:5: error: expected declaration or statement at end of input
